--- a/cv-java.html
+++ b/cv-java.html
@@ -666,7 +666,7 @@
                     
                     <div class="project-item">
                         <h3 class="project-name">Plateforme E-Learning</h3>
-                        <p class="project-description">Application web avec Spring Boot, gestion cours, vidéos, quiz et système de messagerie intégré.</p>
+                        <p class="project-description">Application mobile avec Spring Boot, gestion cours, vidéos, quiz et système de messagerie intégré.</p>
                     </div>
                 </div>
             </div>
@@ -748,3 +748,4 @@
     </script>
 </body>
 </html>
+
